tests/paczka1/small_fuzzy/47462702.err
Error in line 2: hQM6b2io32 S279 16,2
Error in line 5: hQM6b2io32 S411 32,0
Error in line 8: j7GT S411 12,4
Error in line 9: M0EojLpORI S279 79,8
